--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
   <h1 class="text-3xl font-bold underline text-emerald-500">
     Hello world!
   </h1>
+  <div class="w-36 h-40 bg-white border-2 border-gray-400 rounded-lg">sdjbskj</div>
 </body>
 </html>
