--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/dist/output.css" rel="stylesheet">
 </head>
-<body class="bg-slate-100">
-  <h1 class="text-3xl font-bold underline text-emerald-500">
-    Hello world!
-  </h1>
-  <div class="w-36 h-40 bg-white border-2 border-gray-400 rounded-lg">sdjbskj</div>
+<body class="flex justify-center">
+  <div class="">
+    <div class="h-12 w-screen bg-stone-900 opacity-60 absolute top-0 z-20">bruh</div>
+    <div class='z-0 overflow-clip h-96 w-screen bg-clip-border'>
+      <img src="/src/download (5).jpg" alt="Train station img"
+      class="relative top-[-100px] z-0">
+    </div>
+    
+  </div>
 </body>
 </html>
